homework-8/files/appUsers/deployment-homework-8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersformetrics-app
  namespace: homework-8
  labels:
    app: usersformetrics-app
spec:
  selector:
    matchLabels:
      app: usersformetrics-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: usersformetrics-app
    spec:
      containers:     
        - name: usersformetricscontainer
          image: christinagorina/homework-8:1.0.0
          ports:
            - containerPort: 8083
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8083
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8083
            initialDelaySeconds: 3
            periodSeconds: 3
