homework-8/files/appUsers/service-homework-8.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersformetrics-app
  namespace: homework-8
  labels:
    app: usersformetrics-app
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8083
      name: metrics
  selector:
    app: usersformetrics-app
