homework-8/files/appUsers/ingress-homework-8.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usersformetrics-app
  namespace: homework-8
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: usersformetrics-app
                port:
                  number: 8888
            pathType: Prefix
            path: /
